# OpenGLStudy

OpenGLStudy/: .editorconfig  CMakeLists.txt  OpenGLStudy.sln
OpenGLStudy/OpenGLStudy/: CMakeLists.txt  CommonDefine.h  DrawRect.cpp  DrawRect.h  DrawShader.cpp  DrawShader.h  DrawTexture.cpp  DrawTexture.h  DrawTriangle.cpp  DrawTriangle.h  DrawWindow.cpp  DrawWindow.h  OpenGLStudy.vcxproj  OpenGLStudy.vcxproj.filters  Shader.cpp  Shader.h  main.cpp
OpenGLStudy/OpenGLStudy/ShaderFile/: FSWithMultiTexture.fs  FSWithShaderClass.fs  VSNormal.txt
OpenGLStudy/Source/include/glad/: glad.h
OpenGLStudy/Source/lib/: glfw3.lib
OpenGLStudy/Source/src/: glad.c
StudyNote/: MarkdownStudyNote.md  着色器.md
